--- a/src/components/clock/clock.css
+++ b/src/components/clock/clock.css
@@ -8,7 +8,8 @@
     height: fit-content;
     padding: 4px 0px;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: flex-end;
     align-items: center;
 }
 
