resume formatted and all modals appearing

--- a/src/components/Icons/Icon.scss
+++ b/src/components/Icons/Icon.scss
@@ -7,10 +7,10 @@
     position: absolute;
     top: 0;
     font: "times", sans-serif;
-}
 
-.icon-div:hover {
-    cursor: pointer;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .icon-img {
