--- a/src/components/MoveableModal/MovableModal.scss
+++ b/src/components/MoveableModal/MovableModal.scss
@@ -5,10 +5,20 @@
     border: 1px solid rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
     z-index: 1000;
-    width: 1000px;
+    width: 50%;
+    max-width: 600px;
     height: fit-content;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: 430px) {
+        width: 100%;
+        height: 700px;
+        max-width: none;
+        left: 50%;
+        top: 55%;
+        transform: translate(-50%, -50%);
+    }
 }
 
 .modal-header {
@@ -20,7 +30,8 @@
 }
 
 .modal-content {
-    height: 500px;
+    height: 900px;
+    width: 100%;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
