--- a/src/components/SplashStyle.scss
+++ b/src/components/SplashStyle.scss
@@ -1,16 +1,27 @@
-.testDiv {
+.splash-div {
     background-color: rgb(11, 23, 180);
     color: white;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    @media screen and (max-width: 430px) {
+
+        align-items: flex-start;
+    }
 }
 
 .disclaimer {
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+.name-img {
+    @media screen and (max-width: 430px) {
+        margin-top: 60px;
+        width: 80%;
+    }
 }
