fixed mobile modals

--- a/src/components/style_imports/_fonts.scss
+++ b/src/components/style_imports/_fonts.scss
@@ -14,7 +14,7 @@
 }
 
 :root {
-    --main-font: DotGothic16, sans-serif;
+    --main-font: 'Pixelify Sans', sans-serif;
+    --clock-font: DotGothic16, sans-serif;
     --test-font: 'Press Start 2P', sans-serif;
-    --nextTest-font: 'Pixelify Sans', sans-serif;
 }
