--- a/src/components/Icons/Icon.scss
+++ b/src/components/Icons/Icon.scss
@@ -4,15 +4,17 @@
     justify-content: center;
     align-items: center;
     width: 75px;
-    padding: 10px 0px;
+    padding: 15px 2px;
     height: 55px;
     position: absolute;
     top: 0;
     font: "times", sans-serif;
+    border: 1px transparent solid;
 
     &:hover {
         cursor: pointer;
-        background-color: rgba($color: #FFFFFF, $alpha: .3);
+        background-color: rgba($color: #FFFFFF, $alpha: .2);
+        border: 1px white dotted;
     }
 }
 
