--- a/src/components/SplashStyle.scss
+++ b/src/components/SplashStyle.scss
@@ -1,3 +1,39 @@
+@import './style_imports/fonts';
+
+.topBar {
+    background-color: rgb(204, 204, 204);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    // justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3px 0px;
+    border-top: 1px white solid;
+    border-bottom: 1px black solid;
+    border-right: 1px black solid;
+    border-left: 1px white solid;
+}
+
+.clock {
+    margin-right: 20px;
+    padding: 2px 5px;
+    border-top: 1px white solid;
+    border-right: 1px black solid;
+    border-bottom: 1px black solid;
+    border-left: 1px white solid;
+    font-family: var(--clock-font);
+    font-size: medium;
+
+    & :hover {
+        cursor: default;
+    }
+}
+
 .splash-div {
     background-color: rgb(11, 23, 180);
     color: white;
@@ -8,7 +44,6 @@
     align-items: center;
 
     @media screen and (max-width: 430px) {
-
         align-items: flex-start;
     }
 }
