--- a/src/components/Icons/Icon.scss
+++ b/src/components/Icons/Icon.scss
@@ -12,7 +12,7 @@
     border: 1px transparent solid;
 
     &:hover {
-        cursor: pointer;
+        // cursor: pointer;
         background-color: rgba($color: #FFFFFF, $alpha: .2);
         border: 1px white dotted;
     }
@@ -31,4 +31,8 @@
     text-overflow: clip;
     display: flex;
     justify-content: center;
+
+    &:hover {
+        cursor: default;
+    }
 }
