--- a/src/components/MoveableModal/MovableModal.scss
+++ b/src/components/MoveableModal/MovableModal.scss
@@ -5,20 +5,20 @@
     border: 1px solid rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
     z-index: 1000;
-    width: 50%;
+    width: 40vw;
     max-width: 650px;
-    height: fit-content;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
 
     @media screen and (max-width: 430px) {
-        width: 100%;
-        height: 700px;
+        transform: translate(-50%, -50%);
+        width: 99%;
+        // height: 50vh;
         max-width: none;
         left: 50%;
         top: 55%;
-        transform: translate(-50%, -50%);
     }
 }
 
@@ -29,7 +29,7 @@
     flex-direction: column;
 
     &:hover {
-        cursor: auto;
+        cursor: default;
     }
 
     & * {
@@ -105,7 +105,7 @@
     text-wrap: nowrap;
 
     &:hover {
-        cursor: pointer;
+        cursor: default;
         border-bottom: 1px gray solid;
     }
 
@@ -120,7 +120,7 @@
 }
 
 .modal-content {
-    height: 900px;
+    height: 100%;
     width: 100%;
     overflow-y: scroll;
     display: flex;
@@ -129,7 +129,7 @@
 
 .close {
     float: right;
-    cursor: pointer;
+    cursor: default;
 }
 
 .invisible {
