--- a/src/components/SplashStyle.scss
+++ b/src/components/SplashStyle.scss
@@ -19,8 +19,29 @@
     border-left: 1px white solid;
 }
 
+.cycle-btn {
+    background-color: rgb(204, 204, 204);
+    margin-left: 5px;
+    border-top: 1px white solid;
+    border-right: 1px black solid;
+    border-bottom: 1px black solid;
+    border-left: 1px white solid;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:active {
+        background-color: rgb(150, 150, 150);
+        border-top: 1px black solid;
+        border-right: 1px white solid;
+        border-bottom: 1px white solid;
+        border-left: 1px black solid;
+    }
+}
+
 .clock {
-    margin-right: 20px;
+    margin-right: 5px;
     padding: 2px 5px;
     border-top: 1px white solid;
     border-right: 1px black solid;
@@ -52,6 +73,10 @@
     position: absolute;
     bottom: 0;
     left: 0;
+
+    &:hover {
+        cursor: default;
+    }
 }
 
 .name-img {
