--- a/src/components/MoveableModal/MovableModal.scss
+++ b/src/components/MoveableModal/MovableModal.scss
@@ -5,7 +5,7 @@
     border: 1px solid rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
     z-index: 1000;
-    width: 40vw;
+    width: 30vw;
     max-width: 650px;
     height: 70vh;
     display: flex;
@@ -86,16 +86,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 600px;
+    width: 95%;
     padding: 10px;
+    overflow-x: auto;
 
     &>div {
         font-size: medium;
     }
 
+
     @media screen and (max-width: 430px) {
         width: 400px;
-        overflow: scroll;
+        // overflow-x: scroll;
     }
 }
 
@@ -103,6 +105,7 @@
     border-bottom: 1px transparent solid;
     max-width: 110px;
     text-wrap: nowrap;
+    padding: 0px 5px;
 
     &:hover {
         cursor: default;
