--- a/src/components/style_imports/_fonts.scss
+++ b/src/components/style_imports/_fonts.scss
@@ -16,5 +16,5 @@
 :root {
     --main-font: 'Pixelify Sans', sans-serif;
     --clock-font: DotGothic16, sans-serif;
-    --test-font: 'Press Start 2P', sans-serif;
+    --log-in-font: 'Press Start 2P', sans-serif;
 }
