--- a/src/components/Icons/Icon.scss
+++ b/src/components/Icons/Icon.scss
@@ -1,3 +1,5 @@
+@import '../style_imports/fonts';
+
 .icon-div {
     display: flex;
     flex-direction: column;
@@ -31,6 +33,8 @@
     text-overflow: clip;
     display: flex;
     justify-content: center;
+
+    font-family: var(--main-font);
 
     &:hover {
         cursor: default;
