--- a/src/components/ModalComponents/Components.scss
+++ b/src/components/ModalComponents/Components.scss
@@ -1,3 +1,40 @@
+@import '../style_imports/fonts';
+
+/* \/\/\/ GLOBAL \/\/\/ */
+
+.blurb-container {
+    font-family: var(--main-font);
+    color: white;
+    position: absolute;
+    background-color: rgba($color: #000000, $alpha: .5);
+    width: 100%;
+    // left: 5%;
+    overflow-y: auto;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    &.disc {
+        height: 135px;
+    }
+
+    &.forest {
+        height: 135px;
+    }
+
+    &.home {
+        height: 115px;
+        bottom: 0%;
+    }
+
+    &>div {
+        padding: 5px 5px;
+    }
+}
+
+/* /\/\/\ GLOBAL /\/\/\ */
+
 /* \/\/\/ AI CHAT \/\/\/ */
 
 .constuction-container {
@@ -14,6 +51,8 @@
     top: 0;
     margin-top: 130px;
     color: white;
+
+    font-family: var(--main-font);
 }
 
 .construction-gif {
@@ -28,15 +67,32 @@
 
 /* /\/\/\ AI CHAT /\/\/\ */
 
+
+/* \/\/\/ ARDIANBNB \/\/\/ */
+// .home.blurb-container {
+//     color: white;
+//     position: absolute;
+//     background-color: rgba($color: #000000, $alpha: .5);
+//     width: 90%;
+//     height: 125px;
+//     // max-height: 200px;
+//     left: 5%;
+//     bottom: 0%;
+//     overflow-y: auto;
+// }
+
+/* /\/\/\ ARDIANBNB /\/\/\ */
+
+
 /* \/\/\/ SOUNDLOG \/\/\/ */
 
-.forest-blurb-container {
-    color: white;
-    position: absolute;
-    background-color: rgba($color: #000000, $alpha: .5);
-    width: 90%;
-    left: 5%;
-}
+// .forest.blurb-container {
+//     color: white;
+//     position: absolute;
+//     background-color: rgba($color: #000000, $alpha: .5);
+//     width: 90%;
+//     left: 5%;
+// }
 
 .forest-arrow {
     width: 200px;
@@ -48,3 +104,36 @@
 }
 
 /* /\/\/\ SOUNDLOG /\/\/\ */
+
+
+/* \/\/\/ DISCORDANCE \/\/\/ */
+
+.disc-div {
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+.disc-arrow-div {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    bottom: 28%;
+    right: 29%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    font-family: var(--log-in-font);
+}
+
+/* /\/\/\ DISCORDANCE /\/\/\ */
+
+/* \/\/\/ RESUME/ABOUT ME \/\/\/ */
+
+.resume-container,
+.about-me-container {
+    font-family: var(--main-font);
+}
