--- a/src/components/MoveableModal/MovableModal.scss
+++ b/src/components/MoveableModal/MovableModal.scss
@@ -54,6 +54,8 @@
     border-bottom: 1px black solid;
     border-left: 1px white solid;
     margin-top: 2px;
+
+    font-family: var(--main-font);
 }
 
 .close {
@@ -107,6 +109,8 @@
     text-wrap: nowrap;
     padding: 0px 5px;
 
+    font-family: var(--main-font);
+
     &:hover {
         cursor: default;
         border-bottom: 1px gray solid;
@@ -125,7 +129,7 @@
 .modal-content {
     height: 100%;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
 }
