--- a/src/components/SplashStyle.scss
+++ b/src/components/SplashStyle.scss
@@ -57,6 +57,28 @@
     }
 }
 
+.clear-btn {
+    margin-right: 5px;
+
+    border-top: 1px white solid;
+    border-right: 1px black solid;
+    border-bottom: 1px black solid;
+    border-left: 1px white solid;
+
+    background-color: #CCCCCC;
+
+    &:active {
+        border-top: 1px black solid;
+        border-right: 1px white solid;
+        border-bottom: 1px white solid;
+        border-left: 1px black solid;
+    }
+
+    @media (max-width: 430px) {
+        display: none;
+    }
+}
+
 .splash-div {
     background-color: rgb(11, 23, 180);
     color: white;
@@ -66,8 +88,12 @@
     justify-content: center;
     align-items: center;
 
+    background-position: 50% 50%;
+    background-size: 100% 100%;
+
     @media screen and (max-width: 430px) {
         align-items: flex-start;
+        background-size: 200% 100%;
     }
 }
 
@@ -75,6 +101,8 @@
     position: absolute;
     bottom: 0;
     left: 0;
+
+    font-family: var(--main-font);
 
     &:hover {
         cursor: default;
