--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './components/style_imports/fonts';
+
 .App {
   margin: 0;
   position: absolute;
@@ -8,8 +10,30 @@
   overflow: hidden;
 }
 
+.resize-box {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // width: 0;
+  // height: 100%;
+  background-color: white;
+  z-index: 3000;
+
+  transition:
+    width ease-out 1s,
+    height ease-out 1s;
+
+  font-size: xx-large;
+  font-family: var(--log-in-font);
+}
+
 body {
   overflow: hidden;
+  background-color: black;
 
   & * {
     font-size: large;
