--- a/src/components/Professional/MainPage.scss
+++ b/src/components/Professional/MainPage.scss
@@ -1,11 +1,12 @@
 .filler-gradient {
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
+    // right: 0;
+    // bottom: 0;
     left: 0;
 
-    height: 100%;
+    // height: 100%;
+    height: fit-content;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -19,7 +20,8 @@
 
 .middle-block {
     width: 1000px;
-    height: 100%;
+    height: 10000px;
+    padding-top: 50px;
     background-color: rgba($color: #FFFFFF, $alpha: .65);
     display: flex;
     flex-direction: column;
