--- a/src/index.scss
+++ b/src/index.scss
@@ -11,16 +11,15 @@
 }
 
 .resize-box {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // width: 0;
-  // height: 100%;
   background-color: white;
+  // background-color: transparent;
   z-index: 3000;
 
   transition:
@@ -32,9 +31,6 @@
 }
 
 body {
-  overflow: hidden;
-  background-color: black;
-
   & * {
     font-size: large;
   }
