hidden features for production

--- a/src/components/Professional/MainPage.scss
+++ b/src/components/Professional/MainPage.scss
@@ -20,7 +20,7 @@
 
 .middle-block {
     width: 1000px;
-    height: 10000px;
+    height: 100vh;
     padding-top: 50px;
     background-color: rgba($color: #FFFFFF, $alpha: .65);
     display: flex;
