--- a/src/components/MoveableModal/MoveableModal.scss
+++ b/src/components/MoveableModal/MoveableModal.scss
@@ -1,6 +1,6 @@
 @import '../style_imports/fonts';
 
-.movable-modal {
+.moveable-modal {
     position: absolute;
     border: 1px solid rgb(204, 204, 204);
     background-color: rgb(255, 255, 255);
@@ -23,14 +23,9 @@
 }
 
 .modal-header {
-    background-color: #f1f1f1;
-    cursor: move;
+    background-color: #d0d0d0;
     display: flex;
     flex-direction: column;
-
-    &:hover {
-        cursor: default;
-    }
 
     & * {
         font-weight: bold;
@@ -56,6 +51,10 @@
     margin-top: 2px;
 
     font-family: var(--main-font);
+
+    &:hover {
+        cursor: move;
+    }
 }
 
 .close {
@@ -142,9 +141,3 @@
 .invisible {
     display: none;
 }
-
-// onClick={() => {
-//     if (name === header) return;
-//     Object.keys(nameObj).forEach(el => closeModal(nameObj[el]))
-//     .then(openModal(nameObj[name]))
-// }}
