--- a/src/components/style_imports/_fonts.scss
+++ b/src/components/style_imports/_fonts.scss
@@ -1,20 +1,38 @@
 @font-face {
-    font-family: 'DotGothic16';
-    src: url('../../fonts/DotGothic16-Regular.ttf') format('truetype');
+    font-family: "DotGothic16";
+    src: url("../../fonts/DotGothic16-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'Press Start 2P';
-    src: url('../../fonts/PressStart2P-Regular.ttf');
+    font-family: "Press Start 2P";
+    src: url("../../fonts/PressStart2P-Regular.ttf");
 }
 
 @font-face {
-    font-family: 'Pixelify Sans';
-    src: url('../../fonts/PixelifySans-Regular.ttf');
+    font-family: "Pixelify Sans";
+    src: url("../../fonts/PixelifySans-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Gohu";
+    src: url("../../fonts/GohuFont14NerdFont-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Big Blue";
+    src: url("../../fonts/BigBlueTerm437NerdFont-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Heavy Data";
+    src: url("../../fonts/HeavyDataNerdFont-Regular.ttf");
 }
 
 :root {
-    --main-font: 'Pixelify Sans', sans-serif;
-    --clock-font: DotGothic16, sans-serif;
-    --log-in-font: 'Press Start 2P', sans-serif;
+    --main-font: "Pixelify Sans", sans-serif;
+    --clock-font: "DotGothic16", sans-serif;
+    --log-in-font: "Press Start 2P", sans-serif;
+    --Gohu-test: "Gohu", sans-serif;
+    --Big-Blue-test: "Big Blue", sans-serif;
+    --Heavy-Data-test: "Heavy Data", sans-serif;
 }
