--- a/src/components/Professional/MainPage.scss
+++ b/src/components/Professional/MainPage.scss
@@ -1,8 +1,6 @@
 .filler-gradient {
     position: absolute;
     top: 0;
-    // right: 0;
-    // bottom: 0;
     left: 0;
 
     // height: 100%;
@@ -10,21 +8,23 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    background-color: #0405aa;
 
     background:
-        linear-gradient(30deg, rgb(0, 100, 255), rgb(0, 255, 180), rgb(0, 100, 255)),
-        // linear-gradient(135deg, rgb(0, 255, 100), transparent 50%),
-        // linear-gradient(225deg, rgb(0, 100, 255), transparent 50%),
-        // linear-gradient(315deg, rgb(0, 255, 100), transparent 50%);
+        // linear-gradient(30deg, rgb(0, 100, 255), rgb(0, 255, 180), rgb(0, 100, 255));
+        linear-gradient(to right top,
+            rgb(0, 0, 136) 33%,
+            #FFD700,
+            rgb(0, 0, 136) 66%);
 }
 
 .middle-block {
-    width: 1000px;
+    width: 1450px;
     // height: 100vh;
     height: fit-content;
     // height: 5000px;
     padding-top: 50px;
-    background-color: rgba($color: #FFFFFF, $alpha: .65);
+    background-color: rgba($color: #FFFFFF, $alpha: 1);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -34,7 +34,7 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1450px) {
         width: 100%;
     }
 }
