--- a/src/components/Professional/TopBar/TopBar.scss
+++ b/src/components/Professional/TopBar/TopBar.scss
@@ -1,16 +1,38 @@
 .topbar-container {
     position: fixed;
     top: 0;
-    width: 1000px;
+    width: 1410px;
     // height: fit-content;
-    height: 50px;
-    background-color: white;
+    height: 60px;
+    background-color: rgba(247, 247, 247, 0.95);
     border-radius: 0 0 10px 10px;
 
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 20px;
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1450px) {
         width: 100%;
+    }
+}
+
+.topbar-btns {
+    width: 480px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &>button {
+        padding: 10px 20px;
+        background-color: transparent;
+        border: 0;
+        border-radius: 10px;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba($color: #CCCCCC, $alpha: .3);
+        }
     }
 }
