--- a/src/components/Professional/PageParts/PageParts.scss
+++ b/src/components/Professional/PageParts/PageParts.scss
@@ -6,14 +6,17 @@
     align-items: center;
     border-bottom: 1px rgba($color: #000000, $alpha: .2) solid;
 
-    @media screen and (max-width: 1400px) {
-        flex-direction: column-reverse;
-        margin-top: 250px;
+    // @media screen and (max-width: 1400px) {
+    //     flex-direction: column-reverse;
+    //     // margin-top: 325px;
 
-        &>.profile-pic {
-            margin-right: 0px;
-        }
-    }
+    //     &>.profile-pic {
+    //         position: absolute;
+    //         top: 0;
+    //         margin-top: 100px;
+    //         margin-right: 0px;
+    //     }
+    // }
 }
 
 .about-me-text-container {
@@ -24,13 +27,17 @@
     padding: 0px 90px;
     font-size: 20pt;
 
+    // @media screen and (max-width: 1450px) {
+    //     align-items: center;
+    // }
+
     &>h2 {
         margin-top: 90px;
         font-weight: 300;
         width: fit-content;
-        font-size: 2em;
-        // font-size: 37px;
-        padding: 20px;
+        font-size: 1.5em;
+        padding: 1.5em;
+        padding-left: 0px;
         border-bottom: 1px rgba($color: #000000, $alpha: .5) solid;
     }
 
@@ -49,9 +56,15 @@
         }
     }
 
-    &>div {
-        font-size: 17pt;
+    &>p {
+        display: block;
+        margin-block-start: 1em;
+        margin-block-end: 1em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        // font-size: .8em;
         line-height: 1.65;
+        // line-height: 1.65;
         margin-bottom: 90px;
     }
 }
@@ -64,40 +77,101 @@
     padding: 5px;
     margin-right: 50px;
 
-    @media screen and (max-width: 500px) {
-        width: 200px;
-        height: 200px;
-    }
+    // @media screen and (max-width: 500px) {
+    //     width: 200px;
+    //     height: 200px;
+    // }
 }
 
 // ↑↑↑ ABOUT ME
 
 // ↓↓↓ PROJECTS ↓↓↓
 .proj-container {
+    padding-top: 50px;
     width: 100%;
-    height: 700px;
+    height: fit-content;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     border-bottom: 1px rgba($color: #000000, $alpha: .2) solid;
+    padding-bottom: 70px;
 
-    & img {
-        width: 200px;
-        height: 200px;
-        // border: 1px rgba($color: #000000, $alpha: .2) solid;
-        padding: 50px;
+    &>h2 {
+        font-weight: 300;
+        width: fit-content;
+        font-size: 2em;
+        padding: 20px;
+        padding-top: 0px;
+        margin-top: 0;
+        margin-bottom: 80px;
+        border-bottom: 1px rgba($color: #000000, $alpha: .5) solid;
     }
+
+    // @media screen and (max-width: 1160px) {
+    //     justify-content: center;
+
+    //     &>div {
+    //         flex-direction: column;
+    //         align-items: center;
+    //     }
+    // }
 }
 
 .proj-desc {
+    width: 400px;
     display: flex;
-    width: 100%;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
 
     &>div {
+        width: fit-content;
         border: 1px rgba($color: #000000, $alpha: .2) solid;
         border-radius: 100%;
+        margin-bottom: 20px;
+
+        &>img {
+            width: 130px;
+            height: 130px;
+            padding: 50px;
+        }
+    }
+
+    &>h2 {
+        font-weight: 300;
+        font-size: 20pt;
+    }
+
+    &>p {
+        height: 99px;
+        text-align: center;
+        font-size: 15pt;
+        line-height: 1.65;
+    }
+
+    &>img {
+        width: 350px;
+        border-radius: 15px;
+        margin-bottom: 40px;
+    }
+
+    &>button {
+        width: 300px;
+        height: 50px;
+        border: 1px black solid;
+        border-radius: 5px;
+        background-color: transparent;
+        // padding: 10px 20px;
+        margin-bottom: 20px;
+        transition: background-color .2s;
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba($color: #000000, $alpha: .1);
+        }
+
+        &:active {
+            background-color: rgba($color: #000000, $alpha: .4);
+        }
     }
 }
 
@@ -113,5 +187,39 @@
 // ↓↓↓ Contacts ↓↓↓
 .contact-container {
     width: 100%;
-    height: 1500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 100px;
+
+    &>h2 {
+        font-size: 2em;
+        font-weight: 300;
+        padding: 20px;
+        border-bottom: 1px black solid;
+    }
+
+    &>div {
+        width: 55%;
+        display: flex;
+        justify-content: space-around;
+
+        &>button {
+            width: 200px;
+            height: 60px;
+            border: 1px black solid;
+            border-radius: 15px;
+            background-color: transparent;
+            transition: background-color .2s;
+
+            &>img {
+                width: 40px;
+            }
+
+            &:hover {
+                cursor: pointer;
+                background-color: rgba($color: #000000, $alpha: .1);
+            }
+        }
+    }
 }
