--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -77,6 +77,7 @@
     border: 2px rgba($color: #000000, $alpha: .2) solid;
     // box-shadow: 0 0 1px black;
     transition: background-color .1s;
+    margin-right: 20px;
 
     & *:hover {
         cursor: pointer;
