--- a/src/components/MoveableModal/MoveableModal.scss
+++ b/src/components/MoveableModal/MoveableModal.scss
@@ -7,7 +7,8 @@
     z-index: 1000;
     width: 30vw;
     max-width: 650px;
-    height: 70vh;
+    height: fit-content;
+    // height: 70vh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -126,7 +127,9 @@
 }
 
 .modal-content {
-    height: 100%;
+    // height: 100%;
+    // height: 65vh;
+    height: fit-content;
     width: 100%;
     overflow-y: auto;
     display: flex;
