--- a/src/components/ClockDropDown/Clock.scss
+++ b/src/components/ClockDropDown/Clock.scss
@@ -1,4 +1,5 @@
 .clock {
+    background-color: rgb(204, 204, 204);
     margin-right: 5px;
     padding: 2px 5px;
     border-top: 1px white solid;
@@ -7,8 +8,54 @@
     border-left: 1px white solid;
     font-family: var(--clock-font);
     font-size: medium;
+    transition: background-color .1s, border .1s;
 
-    & :hover {
-        cursor: default;
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:active {
+        background-color: rgb(150, 150, 150);
+        border-top: 1px black solid;
+        border-right: 1px white solid;
+        border-bottom: 1px white solid;
+        border-left: 1px black solid;
+    }
+}
+
+.clock-dropdown {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 37px;
+    margin-right: 5px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(204, 204, 204);
+
+    &.false {
+        display: none;
+    }
+
+    &>time {
+        font-family: var(--clock-font);
+        font-size: 13pt;
+        display: flex;
+        align-items: center;
+        padding-right: 2px;
+        border-top: 1px white solid;
+        border-right: 1px black solid;
+        border-bottom: 1px black solid;
+        border-left: 1px white solid;
+
+        &>img {
+            padding: 3px;
+            width: 40px;
+            height: 20px;
+        }
+
+        &:hover {
+            cursor: default;
+        }
     }
 }
