--- a/src/components/DropDownMenu/DropDown.scss
+++ b/src/components/DropDownMenu/DropDown.scss
@@ -9,28 +9,26 @@
 
 
 .option-container {
-    // background-color: black;
     position: absolute;
     top: 38px;
     z-index: 100;
-    // height: 205px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    // opacity: 0;
     opacity: 1;
     transition: opacity .5s;
 
-    font-family: var(--main-font);
 
-    &>div {
-        // background-color: white;
+    &>button {
+        font-family: var(--main-font);
         background-color: rgb(204, 204, 204);
 
         border-top: 1px white solid;
         border-right: 1px black solid;
         border-bottom: 1px black solid;
         border-left: 1px white solid;
+
+        transition: background-color .1s, border .1s;
 
         &:hover {
             cursor: pointer;
