--- a/src/components/ModalComponents/Components.scss
+++ b/src/components/ModalComponents/Components.scss
@@ -76,6 +76,10 @@
     transform: rotate(180deg);
     bottom: 0;
     left: 40%;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 /* /\/\/\ SOUNDLOG /\/\/\ */
@@ -101,9 +105,28 @@
     align-items: center;
 
     font-family: var(--log-in-font);
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 /* /\/\/\ DISCORDANCE /\/\/\ */
+
+/* \/\/\/ AIRBNB \/\/\/ */
+.door-img {
+    width: 50%;
+    height: 55%;
+    position: absolute;
+    top: 18%;
+    left: 22%;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+/* /\/\/\ AIRBNB /\/\/\ */
 
 /* \/\/\/ RESUME/ABOUT ME \/\/\/ */
 
