--- a/src/components/MoveableModal/MoveableModal.scss
+++ b/src/components/MoveableModal/MoveableModal.scss
@@ -71,6 +71,10 @@
     top: 0;
     right: 0;
 
+    &:hover {
+        cursor: pointer;
+    }
+
     &.invisible {
         display: none;
     }
@@ -82,6 +86,10 @@
     position: absolute;
     top: 0;
     right: 0;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .name-tab-div {
@@ -112,7 +120,7 @@
     font-family: var(--main-font);
 
     &:hover {
-        cursor: default;
+        cursor: pointer;
         border-bottom: 1px gray solid;
     }
 
